samples/_failures_safe/1761392174_56fa51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b954b10.c: In function ‘main’:
./samples/SAFE/__tmp_5b954b10.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_5b954b10.c:140:9: error: expected declaration or statement at end of input
